src/test/tests/other/sample/syntacErr.wacc
# Output:
# #syntax_error#

# Exit:
# 100

begin end